# omy-skills

./: .gitignore  README.md  SKILLS.md
.workbuddy/memory/: 2026-07-12.md
scripts/: install-mac.sh  install-mobile.ps1  install-mobile.sh  install-pc.ps1  link-skills.ps1  link-skills.sh
skills/mac-assistant/: INSTALL.md  SKILL.md
skills/mobile-assistant/: INSTALL.md  SKILL.md
skills/pc-assistant/: INSTALL.md  SKILL.md
tools/macrun/: README.md  config.template.yaml  pyproject.toml  requirements.txt
tools/macrun/macrun/: __init__.py  act.py  agent.py  ax.py  cli.py  config.py  gate.py  vision.py  wechat.py
tools/macrun/tests/: test_read_screenshot_path.py  test_resolve_session.py  test_send_verify_helpers.py
tools/mobilerun/: config.template.yaml  config_multi_windows.yaml
tools/ufo2/: .gitignore  MODIFICATIONS.md  README.md  requirements.txt
tools/ufo2/config/ufo/: agents.yaml.template  system.yaml
tools/ufo2/scripts/: set_clipboard.py
tools/ufo2/ufo/agents/processors/: host_agent_processor.py
tools/ufo2/ufo/agents/processors/schemas/: response_schema.py
tools/ufo2/ufo/agents/processors/strategies/: app_agent_processing_strategy.py  host_agent_processing_strategy.py
tools/ufo2/ufo/client/mcp/local_servers/: cli_mcp_server.py  ui_mcp_server.py
tools/ufo2/ufo/module/: context.py
tools/ufo2/ufo/prompts/share/base/: host_agent.yaml
