[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macrun"
version = "0.1.0"
description = "Thin macOS desktop automation runtime for omy-skills mac-assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "PyYAML>=6.0",
  "pyobjc-core>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
macrun = "macrun.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["macrun*"]
